--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
   </head>
   <body>
     <header>
@@ -24,5 +24,5 @@
       <div class="flex" id="lift-wrapper"></div>
     </main>
   </body>
-  <script src="./js/main.js"></script>
+  <script src="./src/js/main.js"></script>
 </html>
