--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
   <body>
     <header>
       <label>
-        Rows
+        Floors
         <input id="row-input" type="number" />
       </label>
       <label>
-        Columns
+        Lifts
         <input id="column-input" type="number" />
       </label>
       <button id="generate-button">Generate</button>
     </header>
+    <h1 id="state-value"></h1>
     <main>
       <div id="lift-button-wrapper"></div>
       <div class="flex" id="lift-wrapper"></div>
